--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "devDependencies": {
     "vite": "^5.2.10"
   },
-  "scripts": {
-    "dev": "vite"
-  }
+  
+    "scripts": {
+      "dev": "vite",
+      "build": "vite build",
+      "serve": "vite preview"
+    }
+  
+  
 }
